@@ -2,6 +2,7 @@ Build 40
 - Added "Orders" tab to right panel
 - Tactical AI: Cyclone flies to Rearming deck when have no ammo
 - Tactical AI: weapon maximal range check moved to tactical AI
+- Implemented weapon's minimal attack range
 
 Build 39 (17.05.2013)
 - Sky Fortress now have correct fire delay and weapon state display
